--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
 		"eslint": "^8.56.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"postcss": "^8.4.38",
-		"svelte": "^4.2.7",
+		"svelte": "^4.2.15",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.3",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltestrap/sveltestrap": "^6.2.7"
+	}
 }
